// Copyright (c) all rights. http://networker.vachok.ru 2019.

plugins {
    id 'java'
    id 'idea'
    id 'application'
}

group 'ru.vachok.ostpst'
version '8.0.1919'

sourceCompatibility = 1.8

repositories {
    maven {
        url "https://plugins.gradle.org/m2/"
    }
    mavenCentral()
}
mainClassName="ru.vachok.ostpst.OstToPst"
sourceSets {
    main {
        resources {
            srcDirs = ["src/main/java", "src/main/resources"]
            includes = ["**/*.fxml", "**/*.css", "**/*.properties", "**/*.png","**/*.html","**/*.sql","**/*.jar"]
        }
    }
    test{
        resources{
            srcDirs = ["src/test/java", "src/test/resources"]
            includes = ["**/*.fxml", "**/*.css", "**/*.properties", "**/*.png","**/*.jar"]
        }
    }
}

buildScan {
    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
    termsOfServiceAgree = 'yes'
}

dependencies {
    compile fileTree('lib/')
    // https://mvnrepository.com/artifact/com.pff/java-libpst
    compile group: 'com.pff', name: 'java-libpst', version: '0.9.3'
    // https://mvnrepository.com/artifact/org.testng/testng
    testCompile group: 'org.testng', name: 'testng', version: '7.0.0-beta3'
}
jar {
    baseName = project.name
    version = project.version
    manifest {
        attributes(
            'Main-Class': 'ru.vachok.ostpst.OstToPst',
            'Class-Path': configurations.runtime.collect() { 'lib/' + it.name }.join('')
        )
    }
    from configurations.compile.collect() { it.isDirectory() ? it : zipTree(it) }
}
test{
    useTestNG()
    setMaxParallelForks(3)
    failFast = false
}
